C-Switched to Java 8. C-Revamp URLClassLoaderAccess.java to ClassLoaderAccess.java. A-Added ItemBuilder.java. A-Added new MinecraftUtils methods to build DiscordWebHook from config. A-Added MinecraftUtils.MinecraftReflection. A-Added Utils.Reflection.